# vcf-plink-converter

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vcf_converter/: __init__.py  converter.py  inspector.py  validator.py
src/vcf_plink_converter.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_converter.py  test_inspector.py
